Atualizando views de Books, Lessons e Sections.

--- a/app/views/lessons/_form.html.erb
+++ b/app/views/lessons/_form.html.erb
@@ -1,25 +1,25 @@
 <%= form_for(@lesson) do |f| %>
-  <% if @lesson.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@lesson.errors.count, "error") %> prohibited this lesson from being saved:</h2>
+    <% if @lesson.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@lesson.errors.count, "error") %> prohibited this lesson from being saved:</h2>
 
-      <ul>
-      <% @lesson.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+          <ul>
+            <% @lesson.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+    <div class="form-group">
+      <%= f.label :book_id %><br>
+      <%= f.collection_select(:book_id, Book.all, :id, :description, {}, {:class => 'form-control'}) %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :book_id %><br>
-    <%= f.number_field :book_id %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div class="form-group">
+      <%= f.label :description %><br>
+      <%= f.text_field :description, :class => 'form-control' %>
+    </div>
+    <div class="actions">
+      <%= f.submit :class => 'btn btn-default' %>
+    </div>
 <% end %>
