--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,11 +2,11 @@
 
 <h1>Listing Books</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Description</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -14,9 +14,14 @@
     <% @books.each do |book| %>
       <tr>
         <td><%= book.description %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <div class="btn-group" role="group">
+            <%= link_to 'Edit', edit_book_path(book), :class => 'btn btn-default btn-sm', :role => 'button' %>
+            <%= link_to 'Show', book, :class => 'btn btn-default btn-sm', :role => 'button' %>
+            <%= link_to 'Destroy', book, :class => 'btn btn-danger btn-sm', :role => 'button', method: :delete, data: { confirm: 'Are you sure?' } %>
+          </div>
+
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +29,4 @@
 
 <br>
 
-<%= link_to 'New Book', new_book_path %>
+<%= link_to 'New Book', new_book_path, :class => 'btn btn-default' %>
