--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@section) do |f| %>
+<%= form_for @section, :html => { :multipart => true } do |f| %>
   <% if @section.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@section.errors.count, "error") %> prohibited this section from being saved:</h2>
@@ -11,19 +11,23 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :lesson_id %><br>
-    <%= f.number_field :lesson_id %>
+    <%= f.collection_select(:lesson_id, Lesson.all, :id, :description_detailed, {}, {:class => 'form-control'}) %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :description %><br>
-    <%= f.text_field :description %>
+    <%= f.text_field :description, :class => 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :audio %><br>
-    <%= f.text_field :audio %>
+    <audio controls>
+      <source src="<%= @section.audio %>" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+    <%= f.file_field :audio, :class => 'form-control' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => 'btn btn-default' %>
   </div>
 <% end %>
