--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -23,6 +23,7 @@
         </audio></td>
         <td>
           <div class="btn-group" role="group">
+            <%= link_to 'Questions', section_questions_path(section), :class => 'btn btn-default btn-sm', :role => 'button' %>
             <%= link_to 'Edit', edit_section_path(section), :class => 'btn btn-default btn-sm', :role => 'button' %>
             <%= link_to 'Show', section, :class => 'btn btn-default btn-sm', :role => 'button' %>
             <%= link_to 'Destroy', section, :class => 'btn btn-danger btn-sm', :role => 'button', method: :delete, data: { confirm: 'Are you sure?' } %>
