--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @section, @question %> |
+<%= link_to 'Show', [@section, @question] %> |
 <%= link_to 'Back', section_questions_path %>
