--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -15,5 +15,5 @@
   <%= raw @question.intro %>
 </p>
 
-<%= link_to 'Edit', edit_question_path(@section, @question) %> |
+<%= link_to 'Edit', edit_section_question_path(@section, @question) %> |
 <%= link_to 'Back', section_questions_path %>
