Corrigindo css do btn-group para nao quebrar os botoes quando o espaco for pequeno.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -21,5 +21,8 @@
 nav
   margin-top: 10px
 
+/* Corrige a quebra dos botoes do btn-group quando o espaco fica pequeno */
+.btn-group
+  display: flex
 
 
