--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+
 
 <h1>Listing Questions</h1>
 
@@ -17,10 +17,10 @@
         <td><%= question.section.description_detailed %></td>
         <td><%= question.description %></td>
         <td>
-          <div class="btn-group" role="group">
-            <%= link_to 'Edit', edit_section_question_path(@section, question), :class => 'btn btn-default btn-sm', :role => 'button' %>
-            <%= link_to 'Show', [@section, question], :class => 'btn btn-default btn-sm', :role => 'button' %>
-            <%= link_to 'Destroy', [@section, question], :class => 'btn btn-danger btn-sm', :role => 'button', method: :delete, data: { confirm: 'Are you sure?' } %>
+          <div class="btn-group btn-group-sm" role="group">
+            <%= link_to 'Edit', edit_section_question_path(@section, question), :class => 'btn btn-default', :role => 'button' %>
+            <%= link_to 'Show', [@section, question], :class => 'btn btn-default', :role => 'button' %>
+            <%= link_to 'Destroy', [@section, question], :class => 'btn btn-danger', :role => 'button', method: :delete, data: { confirm: 'Are you sure?' } %>
           </div>
         </td>
       </tr>
