--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,37 +15,51 @@
   <![endif]-->
 </head>
 <body>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/"><%= image_tag "logo.png", :alt => 'Athus' %> Homework</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <% if current_user %>
+            <li><%= nav_link("Dashboard", dashboard_path) %></li>
+
+            <% if current_user.admin? %>
+                <li><%= nav_link("Books", books_path) %></li>
+                <li><%= nav_link("Lessons", lessons_path) %></li>
+                <li><%= nav_link("Sections", sections_path) %></li>
+            <% end %>
+        <% end %>
+
+      </ul>
+      <ul class="navbar-text pull-right">
+        <% if user_signed_in? %>
+            Logged in as <strong><%= current_user.name %></strong>.
+            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+        <% else %>
+            <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+            <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+        <% end %>
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div><!--/.container-fluid -->
+</nav>
 
 <div class="container">
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#"><%= image_tag "logo.png", :alt => 'Athus' %> Homework</a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li><%= nav_link("Books", books_path) %></li>
-          <li><%= nav_link("Lessons", lessons_path) %></li>
-          <li><%= nav_link("Sections", sections_path) %></li>
-
-        </ul>
-        <ul class="navbar-text pull-right">
-          <% if user_signed_in? %>
-              Logged in as <strong><%= current_user.email %></strong>.
-              <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-              <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-          <% else %>
-              <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-              <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-          <% end %>
-        </ul>
-      </div><!--/.nav-collapse -->
-    </div><!--/.container-fluid -->
-  </nav>
 
   <p id="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 <%= yield %>
+
 </div>
+
+<footer class="footer">
+  <div class="container">
+    <p class="text-muted">Athus.</p>
+  </div>
+</footer>
+
 </body>
 </html>
