--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,6 +4,16 @@
 </p>
 
 <p>
+  <strong>Number:</strong>
+  <%= @question.number %>
+</p>
+
+<p>
+  <strong>Sequence:</strong>
+  <%= @question.sequence %>
+</p>
+
+<p>
   <strong>Description:</strong>
   <%= @question.description %>
 </p>
