--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -18,11 +18,17 @@
 @import "bootstrap"
 @import "bootsy"
 
-nav
-  margin-top: 10px
-
 /* Corrige a quebra dos botoes do btn-group quando o espaco fica pequeno */
 .btn-group
   display: flex
 
+body>.container
+  padding-top: 60px
+
+.footer
+  position: absolute
+  bottom: 0
+  width: 100%
+  height: 20px
+  background-color: #f5f5f5
 
