--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -15,10 +15,19 @@
     <%= f.label :section_id %><br>
     <%= f.select(:section_id, options_for_select([[@section.description_detailed, @section.id]]), {}, {:readOnly => true, :class => 'form-control'}) %>
   </div>
+    <div class="form-group">
+      <%= f.label :number %><br>
+      <%= f.text_field :number, :class => 'form-control' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :sequence %><br>
+      <%= f.text_field :sequence, :class => 'form-control' %>
+    </div>
   <div class="form-group">
     <%= f.label :description %><br>
     <%= f.text_field :description, :class => 'form-control' %>
   </div>
+
   <div class="form-group">
     <%= f.label :intro %><br>
     <%= f.bootsy_area :intro, :class => 'form-control', :rows => 15 %>
