--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -6,6 +6,8 @@
   <thead>
     <tr>
       <th>Section</th>
+      <th>Number</th>
+      <th>Sequence</th>
       <th>Description</th>
       <th colspan="3"></th>
     </tr>
@@ -15,6 +17,8 @@
     <% @questions.each do |question| %>
       <tr>
         <td><%= question.section.description_detailed %></td>
+        <td><%= question.number %></td>
+        <td><%= question.sequence %></td>
         <td><%= question.description %></td>
         <td>
           <div class="btn-group btn-group-sm" role="group">
