--- a/app/views/dashboards/lessons.html.erb
+++ b/app/views/dashboards/lessons.html.erb
@@ -1,4 +1,12 @@
-<h1>Listing Lessons of <%= @book.description %></h1>
+<div class="page-header">
+    <h1>Listing Lessons of <%= @book.description %></h1>
+</div>
+
+<ol class="breadcrumb">
+  <li><a href="/dashboard" >Home</a> </li>
+  <li><%= link_to @book.description, book_lessons_path(@book)%></li>
+  <li class="active">Lessons</li>
+</ol>
 
 <div class="list-group">
   <% @lessons.each do |lesson| %>
