--- a/app/views/dashboards/answer_questions.html.erb
+++ b/app/views/dashboards/answer_questions.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class="row" style="height: 35px">
   <div class="col-md-12" data-spy="affix" data-offset-top="150">
-    <audio controls style="width: 100%;">
+    <audio controls>
       <source src="<%= @section.audio %>" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
