--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -11,6 +11,7 @@
 <p>
   <strong>Audio:</strong>
   <audio controls>
+    <source src="<%= @section.audio %>" type="audio/ogg">
     <source src="<%= @section.audio %>" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
