--- a/app/views/dashboards/answer_questions.html.erb
+++ b/app/views/dashboards/answer_questions.html.erb
@@ -4,8 +4,10 @@
 <div class="row" style="height: 35px">
   <div class="col-md-12" data-spy="affix" data-offset-top="150">
     <audio controls>
+      <source src="<%= @section.audio %>" type="audio/aac">
       <source src="<%= @section.audio %>" type="audio/ogg">
       <source src="<%= @section.audio %>" type="audio/mpeg">
+      <source src="<%= @section.audio %>" type="audio/wav">
       Your browser does not support the audio element.
     </audio>
   </div>
