--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -22,8 +22,10 @@
   <div class="form-group">
     <%= f.label :audio %><br>
     <audio controls>
+      <source src="<%= @section.audio %>" type="audio/aac">
       <source src="<%= @section.audio %>" type="audio/ogg">
       <source src="<%= @section.audio %>" type="audio/mpeg">
+      <source src="<%= @section.audio %>" type="audio/wav">
       Your browser does not support the audio element.
     </audio>
     <%= f.file_field :audio, :class => 'form-control' %>
