--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -11,8 +11,10 @@
 <p>
   <strong>Audio:</strong>
   <audio controls>
+    <source src="<%= @section.audio %>" type="audio/aac">
     <source src="<%= @section.audio %>" type="audio/ogg">
     <source src="<%= @section.audio %>" type="audio/mpeg">
+    <source src="<%= @section.audio %>" type="audio/wav">
     Your browser does not support the audio element.
   </audio>
 </p>
