Colocando botao pra corrigir questao e fazendo ignorar case e accents nas respostas.

--- a/app/views/dashboards/answer_questions.html.erb
+++ b/app/views/dashboards/answer_questions.html.erb
@@ -41,7 +41,7 @@
                   <% end %>
               <% end %>
 
-            <input type="submit" hidden="true" />
+            <input type="submit" value="Send" class="btn btn-success btn-sm"/>
           <% end %>
         </li>
     <% end %>
