--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><%= image_tag "logo.png", :alt => 'Athus' %> Homework</a>
+      <a class="navbar-brand" href="/"><%= image_tag "logo.png", :width => 70, :alt => 'Athus' %> Homework</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
