--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -22,14 +22,21 @@
   <div class="form-group">
     <%= f.label :audio %><br>
     <audio controls>
-      <source src="<%= @section.audio %>" type="audio/aac">
-      <source src="<%= @section.audio %>" type="audio/ogg">
-      <source src="<%= @section.audio %>" type="audio/mpeg">
-      <source src="<%= @section.audio %>" type="audio/wav">
-      Your browser does not support the audio element.
+      <source src="<%= @section.audio %>" type="audio/mp4">
+      <source src="<%= @section.second_audio %>" type="audio/ogg">
+      <p>Your browser does not support HTML5 audio, but you can still
+        <a href="<%= @section.audio %>">download the file</a>.</p>
     </audio>
-    <%= f.file_field :audio, :class => 'form-control' %>
   </div>
+    <div class="form-group">
+        <%= f.label "audio ACC(mp4)" %>
+        <%= f.file_field :audio, :class => 'form-control' %>
+    </div>
+    <div class="form-group">
+        <%= f.label "audio OGG" %>
+        <%= f.file_field :second_audio, :class => 'form-control' %>
+    </div>
+
   <div class="actions">
     <%= f.submit :class => 'btn btn-default' %>
   </div>
