--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -16,8 +16,10 @@
         <td><%= section.lesson.description_detailed %></td>
         <td><%= section.description %></td>
         <td><audio controls>
-          <source src="<%= section.audio %>" type="audio/mpeg">
-          Your browser does not support the audio element.
+          <source src="<%= section.audio %>" type="audio/mp4">
+          <source src="<%= section.second_audio %>" type="audio/ogg">
+          <p>Your browser does not support HTML5 audio, but you can still
+            <a href="<%= section.audio %>">download the file</a>.</p>
         </audio></td>
         <td>
           <div class="btn-group" role="group">
