--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,6 +4,11 @@
 </p>
 
 <p>
+  <strong>Group:</strong>
+  <%= @question.group %>
+</p>
+
+<p>
   <strong>Number:</strong>
   <%= @question.number %>
 </p>
