--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -16,8 +16,12 @@
     <%= f.select(:section_id, options_for_select([[@section.description_detailed, @section.id]]), {}, {:readOnly => true, :class => 'form-control'}) %>
   </div>
     <div class="form-group">
+      <%= f.label :group %><br>
+      <%= f.number_field :group, :class => 'form-control' %>
+    </div>
+    <div class="form-group">
       <%= f.label :number %><br>
-      <%= f.text_field :number, :class => 'form-control' %>
+      <%= f.number_field :number, :class => 'form-control' %>
     </div>
     <div class="form-group">
       <%= f.label :sequence %><br>
