--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">
       <%= f.label :number %><br>
-      <%= f.text_field :number, :class => 'form-control' %>
+      <%= f.number_field :number, :class => 'form-control' %>
     </div>
     <div class="form-group">
       <%= f.label :sequence %><br>
