Adicionando evento para pausar e startar o player pela tecla CTRL.

--- a/app/views/dashboards/answer_questions.html.erb
+++ b/app/views/dashboards/answer_questions.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class="row" style="height: 35px">
   <div class="col-md-12" data-spy="affix" data-offset-top="150">
-    <audio controls>
+    <audio id="player" controls>
       <source src="<%= @section.audio %>" type="audio/mp4">
       <source src="<%= @section.second_audio %>" type="audio/ogg">
       <p>Your browser does not support HTML5 audio, but you can still
