--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -25,7 +25,7 @@
     </div>
     <div class="form-group">
       <%= f.label :sequence %><br>
-      <%= f.text_field :sequence, :class => 'form-control' %>
+      <%= f.number_field :sequence, :class => 'form-control' %>
     </div>
     <div class="form-group">
       <%= f.label :intro %><br>
