--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <% if current_user %>
-            <li><%= nav_link("Dashboard", dashboard_path) %></li>
+            <li><%= nav_link("Athus Books", dashboard_path) %></li>
 
             <% if current_user.admin? %>
                 <li><%= nav_link("Books", books_path) %></li>
@@ -42,7 +42,7 @@
       </ul>
       <ul class="navbar-text pull-right">
         <% if user_signed_in? %>
-            Logged in as <strong><%= current_user.name %></strong>.
+            Hello, <strong><%= current_user.name %></strong>.
             <% if current_user.admin? %>
                 <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
             <% end %>
