Corrigindo texto da pagina inicial e melhorando formatacao.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,9 +2,9 @@
     <h1>Welcome to Athus Homework System!</h1>
 </div>
 <h2>IT´S TIME TO DO YOUR EVERYWEEK HOMEWORK!</h2>
-You have already listened to LISTEN AND LEARN AUDIO to get prepared for your class.
-Now you are listening to the same audio in order to fill the blanks, according to the listened sentences.
-After completing the whole section, you are supposed to submit your homework by pressing the bottom SUBMIT.
-The homework is an essential exercise for you to practice your spelling skill, as well as to help you memorize the content you have learned in your class.
-We remind you that you are NOT going to be allowed to take the tests, unless you submit your homework (referring to the lessons of the test) and get a higher score than 70.
+You have already listened to LISTEN AND LEARN AUDIO to get prepared for your class.<br/>
+Now you are listening to the same audio in order to fill the blanks, according to the listened sentences.<br/>
+After completing the whole section, you are supposed to submit your homework by pressing the button SUBMIT.<br/>
+The homework is an essential exercise for you to practice your spelling skill, as well as to help you memorize the content you have learned in your class.<br/>
+We remind you that you are NOT going to be allowed to take the tests, unless you submit your homework (referring to the lessons of the test) and get a higher score than 70.<br/>
 If you have any doubt, please talk to your teacher.
