Ocultando botao download do player.

--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="form-group">
     <%= f.label :audio %><br>
-    <audio controls>
+    <audio controls controlsList="nodownload">
       <source src="<%= @section.audio %>" type="audio/mp4">
       <source src="<%= @section.second_audio %>" type="audio/ogg">
       <p>Your browser does not support HTML5 audio, but you can still
