--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <td><%= section.lesson.description_detailed %></td>
         <td><%= section.description %></td>
-        <td><audio controls>
+        <td><audio controls controlsList="nodownload">
           <source src="<%= section.audio %>" type="audio/mp4">
           <source src="<%= section.second_audio %>" type="audio/ogg">
           <p>Your browser does not support HTML5 audio, but you can still
