--- a/app/views/dashboards/lessons.html.erb
+++ b/app/views/dashboards/lessons.html.erb
@@ -4,8 +4,7 @@
 
 <ol class="breadcrumb">
   <li><a href="/dashboard" >Home</a> </li>
-  <li><%= link_to @book.description, book_lessons_path(@book)%></li>
-  <li class="active">Lessons</li>
+  <li class="active"><%= @book.description %></li>
 </ol>
 
 <div class="list-group">
