--- a/app/views/dashboards/sections.html.erb
+++ b/app/views/dashboards/sections.html.erb
@@ -4,8 +4,7 @@
 <ol class="breadcrumb">
   <li><a href="/dashboard" >Home</a> </li>
   <li><%= link_to @lesson.book.description, book_lessons_path(@lesson.book)%></li>
-  <li><%= link_to @lesson.description, lesson_sections_path(@lesson) %></li>
-  <li class="active">Sections</li>
+  <li class="active"><%= @lesson.description %></li>
 </ol>
 
 <div class="list-group">
@@ -15,6 +14,10 @@
       <% else %>
           <%= link_to section.description, answer_questions_path(section), :class => "list-group-item" %>
 
+      <% end %>
+
+      <% if can? :destroyUserSection, Section %>
+        <%= link_to 'Destroy answers', destroyUserSection_path(section.id), :class => 'btn btn-danger btn-sm', :role => 'button', data: { confirm: 'Are you sure?' } %>
       <% end %>
   <% end %>
 
