Alterando validacao de arquivo de audio e label.

--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -29,7 +29,7 @@
     </audio>
   </div>
     <div class="form-group">
-        <%= f.label "audio ACC(mp4)" %>
+        <%= f.label "audio AAC" %>
         <%= f.file_field :audio, :class => 'form-control' %>
     </div>
     <div class="form-group">
