Adicionando player na pagina de resultado.

--- a/app/views/dashboards/result_questions.html.erb
+++ b/app/views/dashboards/result_questions.html.erb
@@ -8,6 +8,13 @@
   <li class="active"><%=@section.description%></li>
 </ol>
 
+<audio id="player" controls controlsList="nodownload">
+    <source src="<%= @section.audio %>" type="audio/mp4">
+    <source src="<%= @section.second_audio %>" type="audio/ogg">
+    <p>Your browser does not support HTML5 audio, but you can still
+      <a href="<%= @section.audio %>">download the file</a>.</p>
+</audio>
+
 <h2>
   <b><%= @rights %></b> right of <%=@total%> questions!
 </h2>
